--- a/views/public/html/add-c-contract.html
+++ b/views/public/html/add-c-contract.html
@@ -828,13 +828,181 @@
                                       </div>
                                   </div>
                                   <div class="col-md-6">
-                                    <div class="form-floating">
+                                    <div class="form-floating" style="visibility: hidden;">
                                         <input name="enumber" type="hidden" id="created_by" class="form-control"/>
                                         <label for="created_by">Created By</label>
                                     </div>
                                 </div>
-
+                                <div>
+                                  <h4 class="m-2 text-primary">The below details are for contracts payslips.</h4>
                                 </div>
+                              </div>
+                                <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="openingBalance" type="text" id="contract_opening_balance" class="form-control"/>
+                                          <label for="contract_opening_balance">Opening Balance</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="basicWages" type="text" id="contract_basic_wages" class="form-control"/>
+                                          <label for="contract_basic_wages">Basic Wages</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="leaveWages" type="text" id="contract_leave_wages" class="form-control"/>
+                                          <label for="contract_leave_wages">Leave Wages</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="overtimeWages" type="text" id="contract_overtime_wages" class="form-control"/>
+                                          <label for="contract_overtime_wages">Overtime Wages</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="leaveSubsistence" type="text" id="contract_leave_subsistence" class="form-control"/>
+                                          <label for="contract_leave_subsistence">Leave Subsistence</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="consolidateAllowance" type="text" id="contract_consolidate_allowance" class="form-control"/>
+                                          <label for="contract_consolidate_allowance">Consolidate Allowance</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="fixedOvertime" type="text" id="contract_fixed_overtime" class="form-control"/>
+                                          <label for="contract_fixed_overtime">Fixed Overtime</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="subsistenceAllowance" type="text" id="contract_subsistence_allowance" class="form-control"/>
+                                          <label for="contract_subsistence_allowance">Subsistence Allowance</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="uniformAllowance" type="text" id="contract_uniform_allowance" class="form-control"/>
+                                          <label for="contract_uniform_allowance">Uniform Allowance</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="miscAllowance" type="text" id="contract_misc_allowance" class="form-control"/>
+                                          <label for="contract_misc_allowance">Miscellaneous Allowance</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="otherAllowance" type="text" id="contract_other_allowance" class="form-control"/>
+                                          <label for="contract_other_allowance">Other Allowance</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="onboardOtWages" type="text" id="contract_onboard_ot_wages" class="form-control"/>
+                                          <label for="contract_onboard_ot_wages">Onboard OT Wages</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="joiningBasic" type="text" id="contract_joining_basic" class="form-control"/>
+                                          <label for="contract_joining_basic">Joining Basic</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="tankCleaningBonus" type="text" id="contract_tank_cleaning_bonus" class="form-control"/>
+                                          <label for="contract_tank_cleaning_bonus">Tank Cleaning Bonus</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="additionalWorks" type="text" id="contract_additional_works" class="form-control"/>
+                                          <label for="contract_additional_works">Additional Works</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="prevMonthBalance" type="text" id="contract_prev_month_balance" class="form-control"/>
+                                          <label for="contract_prev_month_balance">Previous Month Balance</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="reimbursement" type="text" id="contract_reimbursement" class="form-control"/>
+                                          <label for="contract_reimbursement">Reimbursement</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="radio" type="text" id="contract_radio" class="form-control"/>
+                                          <label for="contract_radio">Radio</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="onboardFinalSettlement" type="text" id="contract_onboard_final_settlement" class="form-control"/>
+                                          <label for="contract_onboard_final_settlement">Onboard Final Settlement</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="otherDeductions" type="text" id="contract_other_deductions" class="form-control"/>
+                                          <label for="contract_other_deductions">Other Deductions</label>
+                                      </div>
+                                  </div>
+                              </div>
+                          
+                              <div class="row mb-3">
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="training" type="text" id="contract_training" class="form-control"/>
+                                          <label for="contract_training">Training</label>
+                                      </div>
+                                  </div>
+                                  <div class="col-md-6">
+                                      <div class="form-floating">
+                                          <input name="bondStore" type="text" id="contract_bond_store" class="form-control"/>
+                                          <label for="contract_bond_store">Bond Store</label>
+                                      </div>
+                                  </div>
+                              </div>
+
+                                
             
                                 <div class="card-footer text-end pt-0 pe-0 pb-1">
 
