--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -813,6 +813,10 @@
                                                   <input type="text" class="form-control small-font" id="edit_candidate_city"  aria-describedby="fieldX_1_Help"  />
                                               </div>
                                               <div class="col-md-2 mb-3">
+                                                <label for="edit_candidate_state">State</label>
+                                                <input type="text" class="form-control small-font" id="edit_candidate_state"  aria-describedby="fieldX_1_Help"  />
+                                            </div>
+                                              <div class="col-md-2 mb-3">
                                                   <label for="edit_candidate_pin">Pincode</label>
                                                   <input type="text" class="form-control small-font" id="edit_candidate_pin"  aria-describedby="fieldX_1_Help"  />
                                               </div>
@@ -838,6 +842,10 @@
                                                   <label for="edit_candidate_c_ad2">Address</label>
                                                   <input type="text" class="form-control small-font" id="edit_candidate_c_ad2"  aria-describedby="fieldX_2_Help"  />
                                               </div>
+                                              <div class="col-md-2 mb-0">
+                                                <label for="edit_candidate_p_city">City</label>
+                                                <input type="text" class="form-control small-font" id="edit_candidate_p_city"  aria-describedby="fieldX_2_Help"  />
+                                            </div>
                                               <div class="col-md-2 mb-0">
                                                   <label for="edit_candidate_c_state">State</label>
                                                   <input type="text" class="form-control small-font" id="edit_candidate_c_state"  aria-describedby="fieldX_2_Help"  />
