--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -972,6 +972,7 @@
                                                           <th scope="col">Duration&nbsp;of&nbsp;Contract</th>
                                                           <th scope="col">Period&nbsp;Onboard</th>
                                                           <th scope="col" >Actions</th>
+                                                          <th scope="col">Payslip Generation</th>
                                                       </tr>
                                                   </thead>
                                                   <tbody id="contractTableBody">
