--- a/views/public/html/view-candidate.html
+++ b/views/public/html/view-candidate.html
@@ -969,6 +969,28 @@
                                                           <th scope="col" >Document</th>
                                                           <th scope="col">AOA</th>
                                                           <th scope="col">AOA</th>
+                                                            <th scope="col">openingBalance</th>
+                                                            <th scope="col">basicWages</th>
+                                                            <th scope="col">leaveWages</th>
+                                                            <th scope="col">overtimeWages</th>
+                                                            <th scope="col">leaveSubsistence</th>
+                                                            <th scope="col">consolidateAllowance</th>
+                                                            <th scope="col">fixedOvertime</th>
+                                                            <th scope="col">subsistenceAllowance</th>
+                                                            <th scope="col">uniformAllowance</th>
+                                                            <th scope="col">miscAllowance</th>
+                                                            <th scope="col">otherAllowance</th>
+                                                            <th scope="col">onboardOtWages</th>
+                                                            <th scope="col">joiningBasic</th>
+                                                            <th scope="col">tankCleaningBonus</th>
+                                                            <th scope="col">additionalWorks</th>
+                                                            <th scope="col">prevMonthBalance</th>
+                                                            <th scope="col">reimbursement</th>
+                                                            <th scope="col">radio</th>
+                                                            <th scope="col">onboardFinalSettlement</th>
+                                                            <th scope="col">otherDeductions</th>
+                                                            <th scope="col">training</th>
+                                                            <th scope="col">bondStore</th>
                                                           <th scope="col">Duration&nbsp;of&nbsp;Contract</th>
                                                           <th scope="col">Period&nbsp;Onboard</th>
                                                           <th scope="col" >Actions</th>
