--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -15,32 +15,32 @@
                 <tr>
                     <th>Month</th>
                     <th>Year</th>
-                    <th>Start Date</th>
-                    <th>End Date</th>
-                    <th>Days Worked</th>
+                    <th>Start&nbsp;Date</th>
+                    <th>End&nbsp;Date</th>
+                    <th>Days&nbsp;Worked</th>
                     <th>Amount</th>
-                    <th>Opening Balance</th>
-                    <th>Basic Wages</th>
-                    <th>Leave Wages</th>
-                    <th>Overtime Wages</th>
-                    <th>Leave Subsistence</th>
-                    <th>Consolidate Allowance</th>
-                    <th>Fixed Overtime</th>
-                    <th>Subsistence Allowance</th>
-                    <th>Uniform Allowance</th>
-                    <th>Misc Allowance</th>
-                    <th>Other Allowance</th>
-                    <th>Onboard OT Wages</th>
-                    <th>Joining Basic</th>
-                    <th>Tank Cleaning Bonus</th>
-                    <th>Additional Works</th>
-                    <th>Prev Month Balance</th>
+                    <th>Opening&nbsp;Balance</th>
+                    <th>Basic&nbsp;Wages</th>
+                    <th>Leave&nbsp;Wages</th>
+                    <th>Overtime&nbsp;Wages</th>
+                    <th>Leave&nbsp;Subsistence</th>
+                    <th>Consolidate&nbsp;Allowance</th>
+                    <th>Fixed&nbsp;Overtime</th>
+                    <th>Subsistence&nbsp;Allowance</th>
+                    <th>Uniform&nbsp;Allowance</th>
+                    <th>Misc&nbsp;Allowance</th>
+                    <th>Other&nbsp;Allowance</th>
+                    <th>Onboard&nbsp;OT&nbsp;Wages</th>
+                    <th>Joining&nbsp;Basic</th>
+                    <th>Tank&nbsp;Cleaning&nbsp;Bonus</th>
+                    <th>Additional&nbsp;Works</th>
+                    <th>Prev&nbsp;Month&nbsp;Balance</th>
                     <th>Reimbursement</th>
                     <th>Radio</th>
-                    <th>Onboard Final Settlement</th>
-                    <th>Other Deductions</th>
+                    <th>Onboard&nbsp;Final&nbsp;Settlement</th>
+                    <th>Other&nbsp;Deductions</th>
                     <th>Training</th>
-                    <th>Bond Store</th>
+                    <th>Bond&nbsp;Store</th>
                     <th>Actions</th>
                 </tr>
             </thead>
