--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container mt-5">
+    <div class="container mt-5 card">
         <h2 class="mb-4">Payslips</h2>
-        <table class="table table-striped">
+        <table class="table table-striped table-bordered table-responsive">
             <thead>
                 <tr>
                     <th>Month</th>
