--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -10,6 +10,7 @@
 <body>
     <div class="container mt-5 card">
         <h2 class="mb-4">Payslips</h2>
+        <div class="table-responsive">
         <table class="table table-striped table-bordered table-responsive">
             <thead>
                 <tr>
@@ -49,6 +50,7 @@
                 <!-- Payslip entries will be dynamically added here -->
             </tbody>
         </table>
+        </div>
     </div>
 
     <!-- Bootstrap JS and dependencies -->
