--- a/views/public/html/payslips.html
+++ b/views/public/html/payslips.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container mt-5">
         <div class="card">
-            <h2 class="mb-4">Payslips</h2>
+            <h2 class="mb-4 m-2 text-primary">Payslips</h2>
             <div class="table-responsive">
         <table class="table table-striped table-bordered table-responsive">
             <thead>
